<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="mp_app_name">Player</string>

    <!-- MusicPlayer backdrop menu labels -->
    <string name="mp_favorite_tracks_label">Favorite Tracks</string>
    <string name="mp_most_played_label">Most Played</string>
    <string name="mp_recently_played_label">Recently Played</string>
    <string name="mp_all_songs_label">All Songs</string>
    <string name="mp_album_label">Albums</string>
    <string name="mp_artist_label">Artists</string>
    <string name="mp_playlist_label">Playlist</string>
    <string name="mp_search_form">Search…</string>


    <!-- MusicPlayer category titles -->
    <string name="category_title">Category</string>
    <string name="category_album">Albums</string>
    <string name="category_artist">Artists</string>
    <string name="category_all">All Songs</string>


    <!-- MusicPlayer Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MusicPlayer</string>
    <string name="nav_header_subtitle">Made with love.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search">Search…</string>

    <plurals name="item_number">
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_channel_id">channel_id</string>
    <string name="notification_channel_name">Playback Notification</string>
    <string name="nav_header_text1">USIC</string>
    <string name="nav_header_text2">Player</string>
</resources>
