<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/test_input_layout_background"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:drawablePadding="@dimen/activity_spacing"
        android:drawableTint="@color/textColorPrimary"
        android:hint="@string/mp_search_form"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_favorite_tracks_label"
        app:icon="@drawable/ic_favorite_black_24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_most_played_label"
        app:icon="@drawable/ic_most_played_black_24dp"
        app:iconPadding="12dp"
        app:iconSize="28dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_recently_played_label"
        app:icon="@drawable/ic_recent_black_24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_album_label"
        app:iconPadding="14dp"
        app:icon="@drawable/ic_album_black_24dp"
        app:iconSize="26dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_artist_label"
        app:icon="@drawable/ic_artist"
        app:iconSize="24dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MusicPlayer.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_all_songs_label"
        app:icon="@drawable/ic_library_music_black_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/textColorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MusicPlayer.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mp_playlist_label"
            app:icon="@drawable/ic_playlist_play_black_24dp"
            app:iconSize="26dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MusicPlayer.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|clip_horizontal"
            app:icon="@drawable/ic_add_black_24dp"
            app:iconGravity="end" />


    </FrameLayout>


</merge>