<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/music_player_navigation"
    app:startDestination="@id/nav_all_song">

    <fragment
        android:id="@+id/nav_all_song"
        android:name="com.example.musicplayer.controller.AllSongFragment"
        android:label="@string/category_all"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/nav_albums"
        android:name="com.example.musicplayer.controller.AlbumFragment"
        android:label="@string/category_album"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/nav_artists"
        android:name="com.example.musicplayer.controller.ArtistFragment"
        android:label="@string/category_artist"
        tools:layout="@layout/fragment_navigation" />

</navigation>